[package]
name = "authentikit"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
env_logger = "0.3"
base64 = "0.2"
hyper = "0.9"
serde = "0.8"
serde_json = "0.8"
openssl = "0.7"
rust-crypto = "0.2"
url = "1.2"
